test_fm/_test39.nj
//
// return statement must return a value
//

public class Main extends Object {

  public static void main() {
  }

  Integer f(Boolean b) {
    if (b) {
      return;
    }
  }

}
